# serializer version: 1
# name: test_sensors[sensor.acurite_606tx_battery_ok-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.acurite_606tx_battery_ok',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'battery ok',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'battery ok',
    'platform': 'rtl_433',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '01JRTL433HUBAAAAAAAAAAAAAA:Acurite-606TX-42:battery_ok',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[sensor.acurite_606tx_battery_ok-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Acurite-606TX battery ok',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.acurite_606tx_battery_ok',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '1',
  })
# ---
# name: test_sensors[sensor.acurite_606tx_temperature_c-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.acurite_606tx_temperature_c',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'temperature C',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'temperature C',
    'platform': 'rtl_433',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '01JRTL433HUBAAAAAAAAAAAAAA:Acurite-606TX-42:temperature_C',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[sensor.acurite_606tx_temperature_c-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Acurite-606TX temperature C',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.acurite_606tx_temperature_c',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '21.5',
  })
# ---
